--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,59 +1,82 @@
 cmake_minimum_required(VERSION 3.14)
-project(FinanceManager VERSION 1.0.0 LANGUAGES CXX)
 
-# Set C++ standard
+# Project definition with proper versioning and language specification
+project(FinanceManager 
+    VERSION 1.0.0 
+    DESCRIPTION "Financial Management System"
+    LANGUAGES CXX
+)
+
+# Build configuration
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Set include paths for Boost
-if(EXISTS "${CMAKE_SOURCE_DIR}/lib/boost/include")
-    include_directories(${CMAKE_SOURCE_DIR}/lib/boost/include)
+# Set default build type to Release if not specified
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
 endif()
 
+# Compiler warnings
+if(MSVC)
+    add_compile_options(/W4)
+else()
+    add_compile_options(
+        -Wall 
+        -Wextra 
+        -Wpedantic
+        # Temporarily disable -Werror until we fix all warnings
+        # -Werror
+    )
+    
+    # Suppress C99 extension warnings for third-party code
+    add_compile_options(
+        $<$<COMPILE_LANGUAGE:CXX>:-Wno-c99-extensions>
+    )
+endif()
+
+# Required system packages
+find_package(Threads REQUIRED)
+
+# Third-party library paths
+set(THIRD_PARTY_DIR ${CMAKE_SOURCE_DIR}/lib)
+
 # Include directories for third-party libraries
-include_directories(${CMAKE_SOURCE_DIR}/lib/hiredis/include)
-include_directories(${CMAKE_SOURCE_DIR}/lib/nlohmann_json/include)
-include_directories(${CMAKE_SOURCE_DIR}/lib/loguru)
-include_directories(${CMAKE_SOURCE_DIR}/lib/poco/include)
-
-# Library paths
-link_directories(${CMAKE_SOURCE_DIR}/lib/hiredis/lib)
-link_directories(${CMAKE_SOURCE_DIR}/lib/poco/lib)
-
-# Add subdirectories for libraries
-add_subdirectory(src)
-
-# Create main executable
-add_executable(finance_manager src/entry/main.cpp)
-
-# Link against libraries
-target_link_libraries(finance_manager 
-    PRIVATE 
-    finance_lib
-    hiredis
-    pthread
-    dl
-    PocoFoundation
-    PocoNet
+include_directories(
+    ${THIRD_PARTY_DIR}/boost/include
+    ${THIRD_PARTY_DIR}/hiredis/include
+    ${THIRD_PARTY_DIR}/nlohmann_json/include
+    ${THIRD_PARTY_DIR}/loguru
+    ${THIRD_PARTY_DIR}/poco/include
 )
 
-# Installation
-install(TARGETS finance_manager DESTINATION bin)
+# Library paths for linking
+link_directories(
+    ${THIRD_PARTY_DIR}/hiredis/lib
+    ${THIRD_PARTY_DIR}/poco/lib
+)
+
+# Add main source directory
+add_subdirectory(src)
+
+# Installation configuration
+include(GNUInstallDirs)
+install(TARGETS finance_manager 
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
 
 # Testing configuration
-if(EXISTS "${CMAKE_SOURCE_DIR}/tests/main_test.cpp" AND EXISTS "${CMAKE_SOURCE_DIR}/tests/adapter_tests.cpp")
+if(EXISTS "${CMAKE_SOURCE_DIR}/tests")
     include(CTest)
     enable_testing()
-    add_executable(main_tests tests/main_test.cpp)
-    add_executable(adapter_tests tests/adapter_tests.cpp)
-    
-    # Link test executables with the main library and test libraries
-    target_link_libraries(main_tests PRIVATE finance_lib)
-    target_link_libraries(adapter_tests PRIVATE finance_lib)
-    
-    # Add tests
-    add_test(NAME MainTest COMMAND main_tests)
-    add_test(NAME AdapterTest COMMAND adapter_tests)
-endif() 
+    add_subdirectory(tests)
+endif()
+
+# Generate package configuration
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    "${CMAKE_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY SameMajorVersion
+) 
