--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ option(LINK_LOGURU "啟用 Loguru 日誌記錄器" ON)
 option(LINK_NLOHMANN_JSON "啟用 nlohmann/json 支援" ON)
 option(LINK_REDIS_PLUS_PLUS "啟用 redis-plus-plus 的靜態連結" ON)
 option(LINK_SPDLOG "啟用 spdlog 日誌記錄器" ON)
+option(LINK_GTEST "啟用 Google Test 框架" ON)
+option(BUILD_TESTS "建立單元測試" ON)
 
 message(STATUS "靜態連結選項:")
 message(STATUS " LINK_HIREDIS: ${LINK_HIREDIS}")
@@ -33,6 +35,8 @@ message(STATUS " LINK_LOGURU: ${LINK_LOGURU}")
 message(STATUS " LINK_NLOHMANN_JSON: ${LINK_NLOHMANN_JSON}")
 message(STATUS " LINK_REDIS_PLUS_PLUS: ${LINK_REDIS_PLUS_PLUS}")
 message(STATUS " LINK_SPDLOG: ${LINK_SPDLOG}")
+message(STATUS " LINK_GTEST: ${LINK_GTEST}")
+message(STATUS " BUILD_TESTS: ${BUILD_TESTS}")
 
 # 掃描源碼
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/src/*.cpp)
@@ -51,3 +55,45 @@ target_include_directories(CACB PRIVATE ${CMAKE_SOURCE_DIR}/src)
 # 第三方靜態連結
 LinkThirdparty(CACB)
 message(STATUS "已通過 LinkThirdparty 函數連結第三方庫。")
+
+# 設置單元測試
+if(BUILD_TESTS AND LINK_GTEST)
+    message(STATUS "啟用單元測試...")
+    enable_testing()
+    
+    # 掃描測試源文件
+    file(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/tests/*.cpp)
+    
+    if(TEST_SOURCES)
+        message(STATUS "找到的測試源文件:")
+        foreach(TEST_FILE IN LISTS TEST_SOURCES)
+            message(STATUS " ${TEST_FILE}")
+        endforeach()
+        
+        # 添加測試可執行文件
+        add_executable(run_tests ${TEST_SOURCES})
+        
+        # 添加源文件（排除main.cpp）
+        file(GLOB_RECURSE LIB_SOURCES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/src/*.cpp)
+        list(FILTER LIB_SOURCES EXCLUDE REGEX ".*main\.cpp$")
+        
+        if(LIB_SOURCES)
+            target_sources(run_tests PRIVATE ${LIB_SOURCES})
+        endif()
+        
+        # 包含頭文件路徑
+        target_include_directories(run_tests PRIVATE
+            ${CMAKE_SOURCE_DIR}/src
+            ${CMAKE_SOURCE_DIR}/tests
+        )
+        
+        # 連結第三方庫
+        LinkThirdparty(run_tests)
+        
+        # 添加測試
+        add_test(NAME AllTests COMMAND run_tests)
+        message(STATUS "已建立測試目標: run_tests")
+    else()
+        message(STATUS "未找到測試源文件，測試目標未建立")
+    endif()
+endif()
